ページを少しましにした。時間があるときに、 jekyll https://github.com/mojombo/jekyll 使って、もうちょいまともな構成にする予定。

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
   <head>
-    <title>ScalaJP Wiki</title>
+    <title>ScalaJP Github Pages</title>
   </head>
   <body>
-    <h1><a href="https://github.com/scalajp/scalajp.github.com/wiki">Scalajp Wiki Page</a></h1>
+    <h1>Scalajp Github Pagesへようこそ</h1>
+    <p>
+    このページは、ScalaJPのGithub上のサイトです。ScalaJP公式サイトは主に、「入り口」および、公式的なリンク集
+    に近いものを提供して、このサイト上には、主に翻訳記事や技術記事を掲載していきます。
+    </p>
+    <p>
+    まず、現在、<a href="https://github.com/scalajp/scalajp.github.com/wiki">ScalaJP Wiki</>があります。
+    記事にするまでも無い小ネタ(Tipsなど)や、執筆途中の記事などどんどん編集してもらってかまいません(Githubの
+    アカウントがあれば誰でも書き込めるようになっています)。
+    </p>
+    <p>
+    翻訳記事については、<a href="https://github.com/scalajp/">ScalaJPのorganizationにあるリポジトリ</a>
+    が、ScalaJPに移管されたものになっています。
+    </p>
   </body>
 </html>
