ちょっと加筆。

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <body>
     <h1>Scalajp Github Pagesへようこそ</h1>
     <p>
-    このページは、ScalaJPのGithub上のサイトです。ScalaJP公式サイトは主に、「入り口」および、公式的なリンク集
-    に近いものを提供して、このサイト上には、主に翻訳記事や技術記事を掲載していきます。
+    このページは、ScalaJPのGithub上のサイトです。<a href="http://jp.scala-users.org/">ScalaJP公式サイト</a>は主に、サイトへの「入り口」および、
+    公式的なリンク集に近いものを提供して、このサイト上には、翻訳記事等を掲載していきます。現時点では、まだ検討段階ですが、記事だけでなく、実際のプロダクト
+    (Specs2など)をforkして、コミュニティベースでいじってみる、といった事もできると面白いかもしれません。
     </p>
+    <h2>現在のステータス</h2>
     <p>
-    まず、現在、<a href="https://github.com/scalajp/scalajp.github.com/wiki">ScalaJP Wiki</>があります。
+    現在、<a href="https://github.com/scalajp/scalajp.github.com/wiki">ScalaJP Wiki</>があります。
     記事にするまでも無い小ネタ(Tipsなど)や、執筆途中の記事などどんどん編集してもらってかまいません(Githubの
     アカウントがあれば誰でも書き込めるようになっています)。
     </p>
