</a>が抜けてたorz

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <h2>現在のステータス</h2>
     <p>
-    現在、<a href="https://github.com/scalajp/scalajp.github.com/wiki">ScalaJP Wiki</>があります。
+    現在、<a href="https://github.com/scalajp/scalajp.github.com/wiki">ScalaJP Wiki</a>があります。
     記事にするまでも無い小ネタ(Tipsなど)や、執筆途中の記事などどんどん編集してもらってかまいません(Githubの
     アカウントがあれば誰でも書き込めるようになっています)。
     </p>
