翻訳一覧へのリンクを追加

--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
     翻訳記事については、<a href="https://github.com/scalajp/">ScalaJPのorganizationにあるリポジトリ</a>
     が、ScalaJPに移管されたものになっています。
     </p>
+    <h2>翻訳一覧</h2>
+    <ul>
+      <li><a href="https://github.com/scalajp/introduction-to-category-theory-in-scala-jp/wiki">Scalaで圏論入門</a></li>
+      <li><a href="effectivescala">effectivescala</a></li>
+      <li><a href="scala-actors-doc-ja">Scala2.8 アクター API</a></li>
+      <li><a href="scala-collections-impl-doc-ja">Scala コレクションのアーキテクチャ</a></li>
+      <li><a href="scala-collections-doc-ja">Scala 2.8 コレクション API</a></li>
+      <li><a href="sbt-getting-started-guide-ja">始める sbt</a></li>
+    </ul>
   </body>
 </html>
