--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <h1>Scalajp Github Pagesへようこそ</h1>
     <p>
     このページは、ScalaJPのGithub上のサイトです。<a href="http://jp.scala-users.org/">ScalaJP公式サイト</a>は主に、サイトへの「入り口」および、
-    公式的なリンク集に近いものを提供して、このサイト上には、翻訳記事等を掲載していきます。現時点では、まだ検討段階ですが、記事だけでなく、実際のプロダクト
-    (Specs2など)をforkして、コミュニティベースでいじってみる、といった事もできると面白いかもしれません。
+    公式的なリンク集に近いものを提供して、このサイト上には、翻訳記事等を掲載していきます。
     </p>
     <h2>現在のステータス</h2>
     <p>
